// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders with default "blue-dark" variant and children 1`] = `
<a
  class="
        rounded-xl font-roboto font-bold transition-colors gap-2 items-center
        px-6 py-4 text-xl sm:py-5 lg:px-10 inline-flex
       
    bg-organick-blue-dark text-default-white border-organick-blue-dark border
    hover:bg-default-white hover:text-organick-blue-dark
  "
  href="/"
>
  Click me
</a>
`;

exports[`Button component renders with default "white" variant and children 1`] = `
<a
  class="
        rounded-xl font-roboto font-bold transition-colors gap-2 items-center
        px-6 py-4 text-xl sm:py-5 lg:px-10 inline-flex
       
    bg-organick-white border-organick-blue-dark border text-organick-blue-dark
    hover:bg-organick-blue-dark hover:text-default-white
  "
  href="/"
>
  Click me
</a>
`;

exports[`Button component renders with default "yellow" variant and children 1`] = `
<a
  class="
        rounded-xl font-roboto font-bold transition-colors gap-2 items-center
        px-6 py-4 text-xl sm:py-5 lg:px-10 inline-flex
       
    bg-organick-yellow text-organick-blue-dark border-organick-yellow border
    hover:bg-default-white
  "
  href="/"
>
  Click me
</a>
`;

exports[`Button component renders with icon when icon prop is true 1`] = `
<a
  class="
        rounded-xl font-roboto font-bold transition-colors gap-2 items-center
        px-6 py-4 text-xl sm:py-5 lg:px-10 inline-flex
       
    bg-organick-blue-dark text-default-white border-organick-blue-dark border
    hover:bg-default-white hover:text-organick-blue-dark
  "
  href="/"
>
  Click me
  <img
    alt="arrow icon"
    class="w-4 h-4 relative top-[0.3px]"
    data-nimg="1"
    decoding="async"
    height="40"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
    style="color: transparent;"
    width="40"
  />
</a>
`;
